--- a/mystyle.css
+++ b/mystyle.css
@@ -63,9 +63,9 @@ nav ul li a:hover {
 
 /* Stylizacja sekcji hero (główna) */
 .hero {
-    position: relative; /* Ustawienie pozycji, aby nakładka mogła być położona na tło */
+    position: relative; 
     background: url('images/carstart.jpg') no-repeat center center/cover;
-    height: 600px;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
