--- a/mystyle.css
+++ b/mystyle.css
@@ -321,9 +321,12 @@ footer p {
 
 /* Siatka dla formularza i informacji kontaktowych */
 .contact-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
     gap: 40px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    
 }
 
 /* Stylizacja formularza kontaktowego */
@@ -379,6 +382,9 @@ footer p {
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    width: 600px;
 }
 
 .contact-info h3 {
